--- a/Code/Csharp/AsyncTask/AsyncWebApp/AsyncWebApp.csproj
+++ b/Code/Csharp/AsyncTask/AsyncWebApp/AsyncWebApp.csproj
@@ -246,7 +246,7 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AsyncTasls\AsyncTasks.csproj">
+    <ProjectReference Include="..\AsyncTasks\AsyncTasks.csproj">
       <Project>{7e1cfdb8-8428-48bd-98f3-48bec9c19cf3}</Project>
       <Name>AsyncTasks</Name>
     </ProjectReference>
